implemented profile update
